# nu_plugin_compress

./: Cargo.toml  README.md
src/: compress.rs  decompress.rs  lib.rs  main.rs
